fix publish artifact name

--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,7 @@ publishing {
     publications {
         stubs(MavenPublication) {
             artifact verifierStubsJar
-            artifactId project.name
+            artifactId "warehouse"
         }
     }
 }
