--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,10 @@ server.port=8070
 spring.application.name=warehouse
 spring.main.banner-mode=off
 
-spring.datasource.url=jdbc:postgresql://postgres:5432/scc
+spring.datasource.url=jdbc:postgresql://postgres:5432/warehouse
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=program
 spring.datasource.password=test
-spring.jpa.properties.hibernate.default_schema=warehouse
 spring.jpa.hibernate.ddl-auto=update
 
 spring.flyway.enabled=false
