--- a/.drone.yml
+++ b/.drone.yml
@@ -13,3 +13,13 @@ steps:
         from_secret: BINTRAY_TOKEN
     commands:
       - gradle clean compileJava test jacocoTestReport --info
+
+  - name: coverage
+    image: plugins/codecov
+    settings:
+      token:
+        from_secret: COVERAGE_TOKEN
+      files:
+        - *.xml
+      paths:
+        - build/jacoco
