--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,38 @@
 plugins {
-    id "java"
     id "idea"
     id "jacoco"
     id "maven-publish"
-    id "com.jfrog.bintray" version "1.8.4"
-    id "org.springframework.boot" version "2.1.7.RELEASE"
-    id "io.spring.dependency-management" version "1.0.5.RELEASE"
-    id "org.springframework.cloud.contract" version "2.1.4.RELEASE"
+    id "com.jfrog.bintray" version "1.8.5"
+    id "org.jetbrains.kotlin.jvm" version "1.5.21"
+    id "org.jetbrains.kotlin.plugin.jpa" version "1.5.21"
+    id "org.jetbrains.kotlin.plugin.spring" version "1.5.21"
+    id "org.springframework.boot" version "2.5.0"
+    id "io.spring.dependency-management" version "1.0.11.RELEASE"
+    id "org.springframework.cloud.contract" version "3.0.3"
 }
 
-apply from: "libraries.gradle"
+[compileKotlin, compileTestKotlin]*.kotlinOptions *.jvmTarget = "11"
 
-sourceCompatibility = 1.11
-targetCompatibility = 1.11
+ext {
+    springCloudVersion = "3.0.3"
+    gsonVersion = "2.8.7"
+    guavaVersion = "30.1.1-jre"
+    openApiVersion = "1.5.10"
+    commonsLangVersion = "3.12.0"
+    hibernateTypesVersion = "2.10.4"
+    postgresContainerVersion = "1.15.2"
+}
 
 idea {
     module {
         downloadJavadoc = true
         downloadSources = true
+    }
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-contract-dependencies:$springCloudVersion"
     }
 }
 
@@ -30,13 +45,8 @@ jacocoTestReport {
     }
 }
 
-test {
-    useJUnitPlatform()
-}
-
 repositories {
     mavenCentral()
-    jcenter()
 }
 
 publishing {
@@ -51,11 +61,11 @@ publishing {
 bintray {
     user = System.getenv("BINTRAY_USER")
     key = System.getenv("BINTRAY_TOKEN")
-    publications = ['stubs']
+    publications = ["stubs"]
     publish = true
     pkg {
-        repo = 'scc-microservices'
-        name = 'warehouse'
+        repo = "scc-microservices"
+        name = "warehouse"
     }
 }
 
@@ -71,35 +81,45 @@ contracts {
 }
 
 dependencies {
-    // Spring
     implementation "org.springframework.boot:spring-boot-starter-web"
     implementation "org.springframework.boot:spring-boot-starter-data-jpa"
     implementation "org.springframework.boot:spring-boot-starter-actuator"
     implementation "org.springframework.boot:spring-boot-starter-logging"
 
-    // DB
     implementation "org.postgresql:postgresql"
     implementation "org.flywaydb:flyway-core"
+    implementation "com.vladmihalcea:hibernate-types-52:$hibernateTypesVersion"
 
-    // Common
-    implementation "com.google.guava:guava:${guavaVersion}"
-    implementation "org.apache.commons:commons-lang3:${commonsLangVersion}"
+    implementation "org.springdoc:springdoc-openapi-ui:$openApiVersion"
+    implementation "org.springdoc:springdoc-openapi-kotlin:$openApiVersion"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    implementation "org.jetbrains.kotlin:kotlin-reflect"
+    implementation "com.fasterxml.jackson.module:jackson-module-kotlin"
 
-    // Utils
-    compileOnly "com.google.code.findbugs:jsr305:${findBugsVersion}"
-    implementation "org.projectlombok:lombok:${lombokVersion}"
-    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+    implementation "com.google.guava:guava:$guavaVersion"
+    implementation "com.google.code.gson:gson:$gsonVersion"
+    implementation "org.apache.commons:commons-lang3:$commonsLangVersion"
+    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 
-    // Test
+    testImplementation "org.mockito:mockito-inline"
     testImplementation "org.springframework.boot:spring-boot-starter-test"
-    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
+    testImplementation "org.springframework.cloud:spring-cloud-contract-spec"
+    testImplementation "org.springframework.cloud:spring-cloud-contract-spec-kotlin"
+    testImplementation "org.springframework.cloud:spring-cloud-starter-contract-verifier"
+    testImplementation "org.testcontainers:postgresql:$postgresContainerVersion"
+}
 
-    testImplementation "org.codehaus.groovy:groovy-all:${groovyVersion}"
-    testImplementation "org.springframework.cloud:spring-cloud-contract-spec:${springContractVersion}"
-    testImplementation "org.springframework.cloud:spring-cloud-starter-contract-verifier:${springContractVersion}"
+test {
+    useJUnitPlatform()
+}
+
+contractTest {
+    useJUnitPlatform()
 }
 
 bootJar {
-    archiveFileName = "warehouse.jar"
+    archiveFileName = "${project.name}.jar"
+    layered {
+        enabled = true
+    }
 }
