--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,15 @@
 server.port=8070
+spring.profiles.active=local
 spring.application.name=warehouse
 spring.main.banner-mode=off
 
-spring.datasource.url=jdbc:postgresql://postgres:5432/warehouse
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=program
-spring.datasource.password=test
-spring.jpa.hibernate.ddl-auto=update
+springdoc.api-docs.path=/api-docs
+springdoc.paths-to-match=/api/**
+springdoc.default-consumes-media-type=application/json
+springdoc.default-produces-media-type=application/json
 
-spring.flyway.enabled=false
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+management.endpoints.web.base-path=/manage
+management.endpoints.web.exposure.include=info,health,loggers
+management.endpoint.health.show-details=always
+management.health.diskspace.enabled=false
+
