build with GitHub actions, publish contracts

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,4 +18,4 @@ jobs:
         uses: eskatos/gradle-command-action@v1
         with:
           dependencies-cache-enabled: true
-          arguments: clean build publish
+          arguments: clean build
