--- a/build.gradle
+++ b/build.gradle
@@ -2,25 +2,25 @@ plugins {
     id "idea"
     id "jacoco"
     id "maven-publish"
-    id "org.jetbrains.kotlin.jvm" version "1.5.10"
-    id "org.jetbrains.kotlin.plugin.jpa" version "1.5.10"
-    id "org.jetbrains.kotlin.plugin.spring" version "1.5.10"
-    id "org.springframework.boot" version "2.5.0"
+    id "org.jetbrains.kotlin.jvm" version "1.7.10"
+    id "org.jetbrains.kotlin.plugin.jpa" version "1.7.10"
+    id "org.jetbrains.kotlin.plugin.spring" version "1.7.10"
+    id "org.springframework.boot" version "2.7.0"
     id "io.spring.dependency-management" version "1.0.11.RELEASE"
-    id "org.springframework.cloud.contract" version "3.0.3"
+    id "org.springframework.cloud.contract" version "3.1.3"
 }
 
-[compileKotlin, compileTestKotlin]*.kotlinOptions*.jvmTarget = "11"
+[compileKotlin, compileTestKotlin, compileContractTestKotlin]*.kotlinOptions*.jvmTarget = "11"
 
 ext {
-    springCloudVersion = "3.0.3"
-    kotlinVersion = "1.5.10"
+    springCloudVersion = "3.1.3"
+    kotlinVersion = "1.7.10"
     gsonVersion = "2.8.7"
     guavaVersion = "30.1.1-jre"
-    openApiVersion = "1.5.10"
+    openApiVersion = "1.6.10"
     commonsLangVersion = "3.12.0"
     hibernateTypesVersion = "2.10.4"
-    postgresContainerVersion = "1.15.2"
+    postgresContainerVersion = "1.16.0"
 }
 
 idea {
@@ -60,7 +60,7 @@ publishing {
                 licenses {
                     license {
                         name = "The Apache License, Version 2.0"
-                        url = "http://www.apache.org/licenses/LICENSE-2.0.txt"
+                        url = "https://www.apache.org/licenses/LICENSE-2.0.txt"
                     }
                 }
                 developers {
@@ -77,12 +77,11 @@ publishing {
     }
     repositories {
         maven {
+            url = uri("https://maven.pkg.github.com/Romanow/scc-warehouse")
             credentials {
-                username = System.getenv("ARTIFACTORY_USER")
-                password = System.getenv("ARTIFACTORY_PASSWORD")
+                username = System.getenv("GITHUB_USER")
+                password = System.getenv("GITHUB_TOKEN")
             }
-
-            url = "https://romanow.jfrog.io/artifactory/scc-libs-release/"
         }
     }
 }
@@ -121,6 +120,7 @@ dependencies {
     testImplementation "org.springframework.boot:spring-boot-starter-test"
     testImplementation "org.springframework.cloud:spring-cloud-contract-spec"
     testImplementation "org.springframework.cloud:spring-cloud-contract-spec-kotlin"
+    testImplementation "org.jetbrains.kotlin:kotlin-compiler-embeddable:$kotlinVersion"
     testImplementation "org.jetbrains.kotlin:kotlin-scripting-compiler-embeddable:$kotlinVersion"
     testImplementation "org.springframework.cloud:spring-cloud-starter-contract-verifier"
     testImplementation "org.testcontainers:postgresql:$postgresContainerVersion"
@@ -137,7 +137,4 @@ contractTest {
 
 bootJar {
     archiveFileName = "${project.name}.jar"
-    layered {
-        enabled = true
-    }
 }
